2015-04-13  Anders Carlsson  <andersca@apple.com>

        Keep track of each shared memory object's protection when deciding whether to return our existing port
        https://bugs.webkit.org/show_bug.cgi?id=143687

        Reviewed by Tim Horton.

        * Platform/SharedMemory.h:
        * Platform/mac/SharedMemoryMac.cpp:
        (WebKit::machProtection):
        (WebKit::SharedMemory::create):
        (WebKit::SharedMemory::map):
        (WebKit::SharedMemory::createHandle):

2015-04-13  Tim Horton  <timothy_horton@apple.com>

        Add a persistent, fixed scale factor to make it easy to scale down WK(Web)Views
        https://bugs.webkit.org/show_bug.cgi?id=143560
        <rdar://problem/16302047>

        Reviewed by Darin Adler.

        Add a new "view" scale factor to WKView and WKWebView.

        Unlike page scale (or "magnification" in the API), view scale:
            - persists between page loads
            - persists between Web process crashes
            - is not user adjustable
            - can reliably be < 1

        The page scale and view scale are multiplied together whenever we push
        a new page scale down into WebCore, so the implementation of view scale
        is transparent to WebCore, and acts effectively as a constant multiplier
        for the (user-adjustable) page scale factor.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::scaleView):
        Add scaleView, which updates our cached viewScaleFactor and pushes it to the Web process.

        (WebKit::WebPageProxy::creationParameters):
        Plumb viewScaleFactor through the page creation parameters.

        * UIProcess/WebPageProxy.h:
        (WebKit::WebPageProxy::viewScaleFactor): Added.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::WebPage):
        If the viewScaleFactor is not 1 at creation time, call scalePage with a page scale of 1.