@@ -407,7 +407,10 @@ void PageClientImpl::setDragImage(const IntPoint& clientPosition, PassRefPtr<Sha
     size.scale(1.0 / toImpl([m_wkView pageRef])->deviceScaleFactor());
     [dragNSImage setSize:size];
 
-    [m_wkView _dragImageForView: (m_webView) ? : m_wkView withImage:dragNSImage.get() at:clientPosition linkDrag:isLinkDrag];
+    if (m_webView)
+        [m_wkView _dragImageForView:m_webView withImage:dragNSImage.get() at:clientPosition linkDrag:isLinkDrag];
+    else
+        [m_wkView _dragImageForView:m_wkView withImage:dragNSImage.get() at:clientPosition linkDrag:isLinkDrag];
 }
 
 void PageClientImpl::setPromisedDataForImage(const String& pasteboardName, PassRefPtr<SharedBuffer> imageBuffer, const String& filename, const String& extension, const String& title, const String& url, const String& visibleUrl, PassRefPtr<SharedBuffer> archiveBuffer)
